--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Activity</string>
+    <string name="firstAct">This is First Activity</string>
+    <string name="secAct">This is Second Activity</string>
+    <string name="btntonxt">Go To Next Activity</string>
+    <string name="btntoprev">Go To Previous Activity</string>
 </resources>
